Added Font + and Font - buttons to real time analysis
Renamed plot-student-activity => post-analysis
# 00.00.21 (60505) Jan 23, 2012
Rewrote state change detection code for tab 2 based on different radio buttons
Only count transitions within same tab, not when switching tabs
Fixed histogram to read clicks within each minute, not click frequency
# 00.00.20 (60477) Jan 20, 2012
# 00.00.19 (60471) Jan 19, 2012
# 00.00.18 (60465) Jan 19, 2012
# 00.00.17 (60454) Jan 18, 2012
# 00.00.16 (60451) Jan 18, 2012
# 00.00.15 (60441) Jan 18, 2012
# 00.00.14 (60439) Jan 18, 2012
# 00.00.13 (60437) Jan 18, 2012
# 00.00.12 (60417) Jan 18, 2012
# 00.00.11 (60410) Jan 18, 2012
# 00.00.10 (60367) Jan 17, 2012
# 00.00.09 (60365) Jan 17, 2012
# 00.00.08 (60295) Jan 14, 2012
# 00.00.07 (58838) Nov 29, 2011
Added a legend
Show tooltips on camera so they don't scale with zoom level
Added tooltips for specific events
Made yellow (system) events wider and always behind black (user) events
Added plots for events and unique events
Show tick label above the tick lines
In PlotStudentActivity, instead of long timestamp, just show 0:00, then 10:00 then 20:00
In PlotStudentActivity instead of machine ID, show "Student "+id
# 00.00.06 (58801) Nov 28, 2011
Fixed parser to factor out time for student to enter ID, see Parser.scala
# 00.00.05 (58582) Nov 14, 2011
# 00.00.04 (58580) Nov 14, 2011
# null.null.00 (58578) Nov 14, 2011
Added menu bar for plot frame gui
Show when the window is active with a filled in region
Renamed package from simeventprocessor to simsharinganalysis and removed scala package
Show events within each sim use
Added a timeline that starts at the first event and has tick marks and labels every 15 minutes
Show a 2d plot of student activity as a function of time.  Row = student machine, x-axis is time and color coding is activity
Added plots for how much time is spent in each tab
# 00.00.03 (58497) Nov 10, 2011
# 00.00.02 (58466) Nov 9, 2011
Plot filtered events vs time